# SwiCC_RP2040

.github/workflows/: build-rp2350.yml
rp2350_uart_bridge/: CMakeLists.txt  main.c  tusb_config.h
src/: SwiCC_RP2040.h
